# games-in-sega-book

./: .gitignore  CMakeLists.txt  README.md
configs/FirstGame/: map2
docs/: Doxyfile
include/FirstGame/: Game.h  Input.hpp  Map.cpp  Map.h  MoveBoxGame.h  Player.h
src/FirstGame/: CMakeLists.txt  Map.cpp  MoveBoxGame.cpp  Player.cpp  main.cpp
